--- a/src/Shared/ui/components/LanguageSwitcher/LanguageSwitcher.module.css
+++ b/src/Shared/ui/components/LanguageSwitcher/LanguageSwitcher.module.css
@@ -1,8 +1,9 @@
+
 .language-switcher {
-    display: flex;
-    justify-content: center;
     align-items: center;
-    min-height: var(--language-bar-height);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     width: 100%;
 }
 
@@ -15,20 +16,36 @@
     margin: 0 0.5rem;
 }
 
-.language-switcher li a {
-    color: var(--color-text);
+.language-switcher li button {
+    color: var(--colors-surface-primary);
     text-decoration: none;
     font-size: 1rem;
     font-weight: 500;
     text-transform: uppercase;
-    transition: color 0.2s ease-in-out;
+    transition: color .5s ease-in-out, background-color .2s ease-in-out;
 
-    &:hover {
-        text-decoration: underline;
-    }
+    border: 2px solid var(--colors-surface-primary);
+    border-radius: .5rem;
+    padding: .5rem .8rem;
+    background: transparent;
 
     &.active {
         font-weight: 700;
-        text-decoration: underline;
+        color: coral;
+        border-color: coral;
     }
+}
+
+.language-switcher li button:hover:not(.active) {
+    cursor: pointer;
+    background-color: coral;
+    color: var(--colors-surface-primary);
+    border-color: var(--colors-surface-primary);
+}
+
+.language_title {
+    font-size: 1rem;
+    margin-bottom: 1.5rem;
+    color: var(--colors-surface-primary);
+    padding-bottom: .25rem;
 }
