--- a/src/Shared/ui/components/LanguageSwitcher/LanguageSwitcher.module.css
+++ b/src/Shared/ui/components/LanguageSwitcher/LanguageSwitcher.module.css
@@ -1,4 +1,3 @@
-
 .language-switcher {
     align-items: center;
     display: flex;
@@ -22,11 +21,12 @@
     font-size: 1rem;
     font-weight: 500;
     text-transform: uppercase;
-    transition: color .5s ease-in-out, background-color .2s ease-in-out;
-
+    transition:
+        color 0.5s ease-in-out,
+        background-color 0.2s ease-in-out;
     border: 2px solid var(--colors-surface-primary);
-    border-radius: .5rem;
-    padding: .5rem .8rem;
+    border-radius: 0.5rem;
+    padding: 0.5rem 0.8rem;
     background: transparent;
 
     &.active {
@@ -43,9 +43,9 @@
     border-color: var(--colors-surface-primary);
 }
 
-.language_title {
+.language__title {
     font-size: 1rem;
     margin-bottom: 1.5rem;
     color: var(--colors-surface-primary);
-    padding-bottom: .25rem;
+    padding-bottom: 0.25rem;
 }
